<resources>
    <string name="app_name">HW1_Groups28</string>
    <string name="bill">Enter Bill Value</string>
    <string name="Billtotal">Bill Total:</string>
    <string name="tip">Tip %</string>
    <string name="tip10">10%</string>
    <string name="tip18">18%</string>
    <string name="tip15">15%</string>
    <string name="custom">Custom</string>
    <string name="customText">Custom:</string>
    <string name="tiptext">Tip</string>
    <string name="total">Total</string>
    <string name="zero">0.00</string>
    <string name="exit">Exit</string>
    <string name="seekValue">25%</string>
</resources>
